Downcase Ractive -> ractive, fix jshint warnings, and only set data attrs if necessary

--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
 	</script>
 
 	<!-- Dependencies -->
-	<script src='lib/Ractive-legacy.js'></script>
-	<script src='src/Ractive-decorators-minmaxwidth.js'></script>
+	<script src='lib/ractive-legacy.js'></script>
+	<script src='src/ractive-decorators-minmaxwidth.js'></script>
 
 	<!-- Demo code -->
 	<script id='demo-code'>
