--- a/test/index.html
+++ b/test/index.html
@@ -10,8 +10,8 @@
 
 	<script src='lib/qunit.js'></script>
 	<script src='lib/qunit-assert-html.js'></script>
-	<script src='../lib/Ractive-legacy.js'></script>
-	<script src='../tmp/Ractive-decorators-minmaxwidth.js'></script>
+	<script src='../lib/ractive-legacy.js'></script>
+	<script src='../tmp/ractive-decorators-minmaxwidth.js'></script>
 
 	<!-- load test modules -->
 	<script src='tests.js'></script>
